--- a/CCG/Pagina_inicial/app/statics/css/style.css
+++ b/CCG/Pagina_inicial/app/statics/css/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
 }
 
+
 :root{
     --sites-height: 400px;
     --sites-width: calc(var(--sites-height) / 1.5);
@@ -35,19 +36,93 @@ body{
 }
 
 .container1{
-    border: 5px solid cyan;
     margin: 10px;
     padding: 10px;
-    width: 40%;
+    width: 50%;
     height: 100vh;
-    text-align: center;
+    text-align: left;
     color: white;
+    font-size: 14px;
+    text-shadow: 0px 0px 10px rgb(12, 8, 240),
+                 0px 0px 20px rgb(12, 8, 240),
+                 0px 0px 30px rgb(12, 8, 240),
+                 0px 0px 40px rgb(12, 8, 240);
 }
 
-.banner-container img{
-    width: 400px;
-    height: 200px;
+.container1 h1, h3{
+    text-align: center;
 }
+
+.img-container{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.box{
+    position: relative;
+    width: 4500px;
+    height: 550px;
+    margin: 50px;
+    cursor: pointer;
+    box-shadow: 0px 0px 20px rgb(11, 11, 212);
+}
+
+.box .imgBx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: box-shadow 0.5s ease;
+}
+
+.box .imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.box::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background: white;
+    z-index: 1000;
+    transition: 1.5s;
+}
+.box:hover{
+    transform: scale(1.1);
+}
+
+.box:hover::before{
+    top: calc(100% - 4px);
+    box-shadow: 0px 0px 15px blue;
+}
+
+.box .imgBx:nth-child(1){
+    filter: grayscale(1) contrast(8);
+}
+
+.box .imgBx:nth-child(2){
+    clip-path: polygon(0 0 , 100% 0 , 100% 0 , 0 0);
+    transition: 1.5s;
+}
+
+.box:hover .imgBx:nth-child(2){
+    clip-path: polygon(0 0 , 100% 0 , 100% 100% , 0 100%);
+    transition: 1.5s;
+}
+
+
 
 .sites-container{
     background: linear-gradient(to top, black, rgb(3, 2, 87));
