adicionando imagem na pagina inicial

--- a/CCG/Pagina_inicial/app/statics/css/style.css
+++ b/CCG/Pagina_inicial/app/statics/css/style.css
@@ -41,7 +41,7 @@ body{
     width: 50%;
     height: 100vh;
     text-align: left;
-    color: white;
+    color: wheat;
     font-size: 14px;
     text-shadow: 0px 0px 10px rgb(12, 8, 240),
                  0px 0px 20px rgb(12, 8, 240),
